name:                tostring
version:             0.2
synopsis:            The ToString class
license:             OtherLicense
author:              Silk B.V.
maintainer:          code@silk.co
category:            Data
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.String.ToString
  build-depends:       base        == 4.*
                     , utf8-string == 0.3.*
                     , text        >= 0.11 && < 1.2
  hs-source-dirs:      src

